--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-IG_USERNAME=spytherbot
-IG_PASSWORD=Spyther@7860
+IG_USERNAME=bot_wala_hu
+IG_PASSWORD=Spyther@7861
 
 GROQ_API_KEY=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
